tests/errors/return_type_mismatch.orus
fn bar() -> f64 {
    return 3
}

fn main() {}
